--- a/src/app/styles/_vars.scss
+++ b/src/app/styles/_vars.scss
@@ -6,6 +6,7 @@
   // colors
   --color-white: #fff;
   --color-black: #000;
+  --color-loader: rgba(59, 58, 62, 0.48);
 
   // z-index
   --header-z-index: 100;
