--- a/src/entities/movie-item/styles.module.scss
+++ b/src/entities/movie-item/styles.module.scss
@@ -5,7 +5,7 @@
   height: 100%;
   border-radius: 15px;
   overflow: hidden;
-  background-color: #111;
+  background-color: var(--color-loader);
 }
 
 .image {
