--- a/src/widgets/category/styles.module.scss
+++ b/src/widgets/category/styles.module.scss
@@ -22,6 +22,10 @@
 .slide {
   width: 18%;
   aspect-ratio: 2/3;
+
+  @media (max-width: 1024px) {
+    width: 22%;
+  }
 }
 
 .prevBtn[disabled],
